Sun Jun 22 04:29:46 GMT 2014  Olly Betts <olly@survex.com>

	* NEWS,configure.ac: Update for 1.2.18.

Wed Apr 30 05:38:13 GMT 2014  Olly Betts <olly@survex.com>

	* NEWS: Update.

Wed Apr 30 03:48:07 GMT 2014  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* lua/smoketest.lua: Whitespace tweak.

Wed Apr 30 03:47:27 GMT 2014  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* lua/smoketest.lua: Change expect() parameter order to the more
	  natural (got, expected), which most of the calls already used,
	  and fix up the few calls which passed (expected, got).

Wed Apr 30 03:45:38 GMT 2014  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* configure.ac: Don't report Python version twice if it's too new or
	  too old.

Tue Mar 25 05:52:18 GMT 2014  Olly Betts <olly@survex.com>

	* python/pythontest2.py,python/pythontest3.py: There's no longer a
	  need to use chert_open() explicitly - chert is the default backend
	  now, and both chert and brass support the required functionality
	  for the tests which do this, so this just needlessly causes the
	  tests to fail if chert is disabled in xapian-core.

Fri Mar 14 11:56:49 GMT 2014  Olly Betts <olly@survex.com>

	* NEWS: Update.

Fri Mar 14 08:30:46 GMT 2014  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* README: Add links to Erlang and Node.js bindings.

Fri Mar 14 08:26:11 GMT 2014  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* configure.ac: Remove unnecessary m4 quoting.

Sun Feb 23 10:36:32 GMT 2014  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* configure.ac: Fix Ruby bindings to build on Windows (and other
	  platforms where allow_undefined_flag=unsupported. (fixes#634)

Sun Feb 23 10:31:40 GMT 2014  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* php/smoketest.php: Add missing "exit(1);" after check that
	  MatchDecider returns an MSet with the expected docid in.
