@@ -1,7 +1,7 @@
 #!/usr/bin/perl -w
 # Add reference handling code
 #
-# Copyright (C) 2013 Olly Betts
+# Copyright (C) 2013,2014 Olly Betts
 #
 # Permission is hereby granted, free of charge, to any person obtaining a copy
 # of this software and associated documentation files (the "Software"), to
@@ -66,9 +66,9 @@ while (<>) {
 	$_ .= "\tprotected \$_stopper=null;\n";
     } elsif (/^class XapianTermGenerator\b/) {
 	$_ .= "\tprotected \$_stopper=null;\n";
-    } elsif (/^\tfunction add_valuerangeprocessor\((\S*)\)/) {
+    } elsif (/^\tfunction add_valuerangeprocessor\((\$\w+)/) {
 	$_ .= "\t\t\$this->_vrps[]=$1;\n";
-    } elsif (/^\tfunction set_stopper\((\S*)\)/) {
+    } elsif (/^\tfunction set_stopper\((\$\w+)/) {
 	$_ .= "\t\t\$this->_stopper=$1;\n";
     }
     print;
