@@ -1,3 +1,10 @@
+Fri Oct 10 12:01:00 GMT 2014  Olly Betts <olly@survex.com>
+
+	* Backport change from trunk:
+	* php/add-php-ref-handling: Be careful to pick up just the parameter
+	  name and not any default value.  (Fixes #659, reported by jmienert)
+	* php/smoketest.php: Add regression test.
+
 Sun Jun 22 04:29:46 GMT 2014  Olly Betts <olly@survex.com>
 
 	* NEWS,configure.ac: Update for 1.2.18.
